tdf#144532 closing mail merge wizard preview removed document's data source

Filter out the "EmbeddedDatabaseName" property from the document
settings on saving document that will be loaded by the mail merge
preview so that when the temp mailmerge preview document is closed it
doesn't unregister the database of the same name which was registered by
the document this is a copy of.

This looks like a similar problem to tdf#118634 addressed by:
commit edc62adae9a354ca1305e83b10c98a545f58d341
Date:   Mon Jul 9 19:49:34 2018 +1000

    tdf#118634: Don't save embedded data source to a temporary preview document

Change-Id: I3fecc2ace1c9e06354b145609f0130dbbb2c036b